@@ -43,8 +43,8 @@ public class EmployeeServiceimpl implements IEmployeeService {
     public List<EmployeeDTO> getAllEmployee() {
       List<Employee> employees=  employeeRepository.findAll();
 
-        return employees.parallelStream().map(data -> EmployeeMapper.mapToEmployeeDTO(data)).
-                collect(Collectors.toList());
+        return employees.parallelStream().map(EmployeeMapper::mapToEmployeeDTO)
+                .toList();
     }
 
 
